<resources>
    <string name="app_name">xdetect</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="splashscreen">splashscreen</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="signin">Sign In</string>
    <string name="login_title">Log In</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="hint_name">Masukkan nama</string>
    <string name="hint_email">Masukkan email</string>
    <string name="hint_phone">Masukkan nomor handphone</string>
    <string name="hint_password">Masukkan password</string>
    <string name="login">Login</string>
    <string name="register_title">Register</string>
    <string name="register_now">Don\'t have an account?</string>
    <string name="register_now_btn">Register</string>
    <string name="artikel">Artikel</string>
    <string name="article_title">Article Title</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Pharetra pellentesque at at amet lectus blandit. Metus risus mi tellus nisi leo cursus a pellentesque ut. Fermentum viverra curabitur eget odio amet vestibulum. Laoreet integer cursus ut netus faucibus. Duis mattis sem diam aliquam nunc quis urna nullam. Congue cursus commodo sit mi duis aliquet orci. Nisi sollicitudin velit imperdiet donec nisl donec. Gravida eget cras ultrices facilisis.\nId donec nisi at tincidunt cras ultricies ut. Risus eu in lorem congue consectetur in. Lacinia pulvinar quam lacus proin id lacus. Eget rhoncus risus odio urna. Varius nisl varius diam in et. Nulla duis id adipiscing malesuada enim magna. Id morbi augue dui ipsum nunc. Nisl etiam sit consequat donec etiam risus ipsum. Etiam magna dis tellus elit eget. Eget eget vivamus in mollis pretium scelerisque. Sed velit ut lorem maecenas lacus nunc.</string>
    <string name="onboard_description1">Selamat datang di Aplikasi Penerjemah Hasil X-ray. Mari kita mulai interpretasi!</string>
    <string name="onboard_description2">Kami akan membantumu memahami  lebih jelas hasil scanmu</string>
    <string name="onboard_description3">Terjemahkan hasil X-ray dengan cepat dan akurat dengan X-DETECT</string>
    <string name="onboard_get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="edit">edit</string>
    <string name="profile">Profile</string>
    <string name="sample_name">Radit Saputra</string>
    <string name="sample_email">lalallaa@gmail.com</string>
    <string name="sample_password">12345678</string>
    <string name="sample_phone">081366538890</string>
    <string name="logout">Logout</string>
    <string name="greet">Selamat Datang</string>
    <string name="greet_name">Radit</string>
    <string name="try_now">Coba Sekarang</string>
    <string name="home_msg">Pastikan Anda memotret dengan cahaya yang baik atau memindai dengan latar belakang putih untuk hasil yang akurat.</string>
    <string name="home_desc">Pahami dengan tepat hasil scan x-ray pada bagian dada untuk memahami kondisi penyakitmu dan petunjuk pengobatannya.</string>
    <string name="date_dummy">01/02/2023</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="scan_result">Detail result scan</string>
    <string name="pneumoninia">Pneumonia</string>
    <string name="penjelasan">Penjelasan</string>
    <string name="lorem_ipsum2">Lorem ipsum dolor sit amet consectetur. Dolor velit sit egestas proin dui mattis mattis. Molestie non consequat senectus ac felis sem ipsum. Hac viverra vitae mauris sit velit vestibulum egestas ut feugiat. Massa urna maecenas venenatis habitasse scelerisque dapibus.</string>
    <string name="saran">Saran</string>
    <string name="upload">Upload</string>
    <string name="login_now">Already have an account?</string>
    <string name="login_now_btn">Login</string>
    <string name="password_invalid">Minimal terdiri dari 8 karakter</string>
    <string name="email_invalid">Masukkan alamat email yang valid</string>
    <string name="preview">Preview</string>
    <string name="username">Username</string>
    <string name="allow_permission">Mohon izinkan akses kamera untuk menggunakan fitur</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="sample_star_password">********</string>
    <string name="save_changes">Save</string>
    <string name="cancel">Cancel</string>
    <string name="msg_failed_changes_name">Gagal melakukan perubahan pada nama</string>
    <string name="msg_failed_changes">Gagal melakukan perubahan</string>
    <string name="gejala">Gejala</string>
    <string name="aksi">Aksi</string>
    <string name="pesan">Pesan</string>
    <string name="dengan_akurasi">Dengan Akurasi</string>
    <string name="acc_percent">75%</string>
    <string name="next_step">Tindakan Selanjutnya</string>
    <string name="accuracy">Akurasi</string>
    <string name="source_title">Source</string>
    <string name="sample_source">www.halodoc.com/artikel/</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reset">Reset</string>
    <string name="reset_title">Reset Password</string>
    <string name="msg_success_reset">Link Reset Password Telah Dikirim Ke Email</string>
    <string name="description">Deskripsi</string>
    <string name="under_construction">Sorry, Under Construction</string>
</resources>