<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardElevation="8dp"

    card_view:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_article"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_corner_10_white"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_xray" />

        <TextView
            android:id="@+id/tv_date_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/img_item_article"
            card_view:layout_constraintTop_toTopOf="@id/img_item_article"
            tools:text="@string/date_dummy" />

        <TextView
            android:id="@+id/tv_detection_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="@id/tv_date_history"
            card_view:layout_constraintTop_toBottomOf="@id/tv_date_history"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/pneumoninia" />

        <TextView
            android:id="@+id/tv_detection"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:maxLines="2"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@id/tv_detection_category"
            card_view:layout_constraintTop_toBottomOf="@id/tv_detection_category"
            tools:text="@string/scan_result" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>